Se elimina entidad Cliente (se elimina en forma lógica, todavia existen las clases a nivel codigo) Se crea el usuario de telegram y direccion como atributo de Pedido Se agrega el metodo put para actualizar direcciones segun un usuario de telegram
